[package]
name = "toybox-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
keyring = { version = "4.1.4" }
md5 = "0.8.0"
rand = "0.10.2"
reqwest = { version = "0.13.4", features = ["json"] }
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_with = "3.21.0"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = "1.0"
